# verba_test_task

./: .gitignore  README.md  config.py  pyproject.toml  wb_parser.py
tests/: test_wb_parser.py
